--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
                     <textarea id = "textarea" class="form-control" placeholder="Enter message"></textarea>
                 </div>
                 <button id = "postbutton", class = "btn btn-primary">Post</button>
+                <button id = "clearbutton", class = "btn btn-danger">Clear</button>
             
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js"></script>
